css/main.css
/*-------------------------------
		 MAIN STYLES
--------------------------------*/

/*-----------header------------*/

* {
	box-sizing: border-box;
}

html {
	font-size: 12px;
}

body {
	min-height: 100vh;
	font-family: 'Roboto', 'Open Sans', sans-serif; 
}

header {
	position: fixed;
  z-index: 102;
	top: 0;
	margin-top: 0;
	height: 13em;
	width: 100%;
	background-color: royalblue;
}

main {
	margin-top: 13em;
}

ul {
  margin: 0;
}

.nav-toggle {
	position: absolute;
	top: 1em;
	left: 2.5em;
}

.user-image {
	position: absolute;
	top: 5em;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 6em;
	border-radius: 50%;
}

.user-name {
	color: white;
  font-size: 1.6em;
	position: absolute;
	top: 5.5em;
  text-align: center;
	left: 50%;
	transform: translate(-50%, -50%);
}

.bell-icon {
	position: absolute;
	top: 1em;
	right: 2.5em;
}


/*----------upper nav----------*/

/* nav display none */

.active li {
  display: none;
}

/* nav display when menu icon clicked */

.activeclicked {
  padding-top: 3.5em;
	padding-left: 2.5em;
  margin: 0em;
  background-color: darkblue;
  transition-duration: 0.8s;
  transition-property: ;
}

.activeclicked li {
  list-style: none;
  padding-bottom: 1em;
}

.activeclicked img {
  width: 2em;
	padding-left: 2px;
}

.activeclicked li a img:hover {
	
}

/*---------side nav-----------*/

.side-nav {
	position: fixed;
	z-index: ;
	top: 30vh;
	left: 0;
	width: 6em;
	height: 100vh;
	background-color: darkblue;
}

.side-nav ul {
  list-style: none;
}

/*-------------------------------
		 MAIN CONTENT
--------------------------------*/

.search, main-heading, {
  display: inline-block;
}

h3 {
  font-size: 1.2em;
  float: left;
  margin: 0.8em 0 1em 1em;
}

section {
	margin: auto;
	width: 85vw;
  padding-bottom: 2em;
  border-bottom: 1px solid darkgray;
}

.search {
  float: right;
  margin: 0.7em 1em 1em 0;
	border: 1px solid lightgray;
	border-radius: 0.3em;
	padding: 0.5em;
}

.search::placeholder,
.search::-webkit-input-placeholder {
	color: lightgray;
}

h4 {
  font-size: 0.9em;
  text-transform: uppercase;
  padding: 2em 0 1em 0;
}

input[type="button"] {
	height: 2em;
	width: 100%;
	color: white;
	text-transform: uppercase;
	background-color: royalblue;
	transition-property: background;
	transition-duration: 1.5s;
}

input[type="button"]:hover {
	cursor: pointer;
}

/*----------alert----------*/

.alert {
	display: flex;
	align-items: center;
	justify-content: flex-end;
  position: fixed;
  top: 16.3em;
  left: 50%;
	z-index: 104;
  transform: translate(-50%, -50%);
  width: 90vw;
  min-height: 4vh;
  max-height: 6vh;
  background-color: royalblue;
	
	box-shadow: 5px 5px 5px lightgray;
  border-radius: 0.3em;
}

.alert span a {
  float: right;
  margin: 0.2em 0.5em 0 0;
  text-decoration: none;
  color: white;
  padding: 1px;
}

.charts {
  margin: 5em auto 0 auto;
	overflow: hidden;
}

/*-------alert close-------*/

.alertclose {
  display: none;
}

/*---------social----------*/

.social {
  display: flex;
	justify-content: flex-start;
	align-items: center;
	width: 65vw;
	margin: auto;
	overflow: hidden;
  padding: 0.5em 0 0.5em 0;
	border-bottom: 1px solid lightgray;
}

.social:last-of-type {
	border-bottom: none;
}

.icon-wrapper {
	position: relative;
	width: 3.5em;
	height: 3.5em;
	background-color: royalblue;
	border-radius: 50%;
}

.icon-wrapper img {
	position: absolute;
	width: 2.5em;
	top:50%;
	left:50%;
  transform:translate(-50%, -50%);
}

.google-icon {
	padding: 0.3em 0 0 0.3em;
}

.twitter-icon {
	padding: 0.3em 0.3em 0 0.3em;
}

.stats-wrapper {
	display: flex;
	flex-direction: column;
	margin: 1em 1.5em;
}

.icon-name {
	color: royalblue;
  font-size: 1em;
  font-weight: 800;
	margin: 0;
}

.social-numbers {
	font-size: 1.5em;
	margin: 0;
} 

/*------new members-------*/

.new-member {
	display: flex;
	justify-content: space-between;
	width: 75vw;
	border-bottom: 1px solid lightgray;
	margin: auto;
	overflow: hidden;
  padding: 0.5em 0 0.5em 0;
}

.new-member:last-of-type {
	border-bottom: none;
}

.new-member img {
	width: 3.5em;
	height: 3.5em;
	border-radius: 50%;
}

.member-details {
	display: flex;
	flex-direction: column;
	margin: 0.6em 1em;
}

.member-name {
  font-size: 0.9em;
  font-weight: 800;
	margin: 0;
}

.member-email {
	color: royalblue;
	font-size: 0.9em;
	margin: 0;
}

.date {
	font-size: 0.8em;
}

/*------recent activity-------*/

.member-activity {
	position: relative;
	display: flex;
	align-items: center;
	width: 75vw;
	margin: auto;
	overflow: hidden;
  padding: 0.5em 0 0.5em 0;
	border-bottom: 1px solid lightgray;
}

.member-activity:last-of-type {
	border-bottom: none;
}

.member-activity img {
	width: 3.5em;
	height: 3.5em;
	border-radius: 50%;
}

.activity {
  font-size: 0.9em;
	margin: 0;
}

.time {
	font-size: 0.8em;
	color: royalblue;
	margin: 0;
}

.arrow {
	position: absolute;
	right: 0;
	text-decoration: none;
	color: royalblue;
	padding: 0.5em;
	
}

/*------message user-------*/

.message-user form {
	display: flex;
	flex-direction: column;
	width: 75vw;
	margin: auto;
}

.message-user input {
	width: 100%;
	border-radius: 0.3em;
	border: solid lightgray 1px;
	padding: 0.5em;
}

.message-user input::placeholder {
	color: lightgray;
}

.message-user textarea {
	width: 100%;
	margin: 0.5em auto;
	min-height: 4em;
	resize: none;
	border-radius: 0.2em;
	border: solid lightgray 1px;
	padding: 0.5em;
}

.message-user textarea::placeholder {
	color: lightgray;
}

input[type="button"]:hover {
	background-color: darkblue;
}
/*------settings-------*/


.switch-light {
	width: 75vw;
	margin: auto;
}

.switch-label {
	font-size: 0.9em;
	display: inline-block;
}

.switch-ios.switch-light > span {
    display: block;
		float: right;
    width: 4.8rem;
    height: 2rem;
		margin-right:  4.5em;
		margin-bottom: 1em;
}
 
.switch-ios.switch-light > span:hover {
	cursor: pointer;
}

.settings select {
	display: block;
	width: 75vw;
	margin: 1em auto;
	border: 1px solid lightgray;
	border-radius: 0.2em;
}

select {
	color: lightgray;
}

option:not(hidden) {
	color: black;
}

.settings input[type="button"] {
	border: solid 1px lightgray;
	border-radius: 0.2em;
	display: inline-block;
	width: 47%;
}  

.setting-buttons {
	display: flex;
	justify-content: space-between;
	width: 75vw;
	margin: auto;
}

.setting-buttons input:last-of-type {
	background-color: lightgray;
	transition-property: background;
	transition-duration: 1.5s;
}

.setting-buttons input:last-of-type:hover {
	background-color: darkgray;
}

/*-------------------------------
		 Media queries
--------------------------------*/

@media screen and (min-width: 320px) {
  .side-nav {
    display: none;
  }
 
}

@media screen and (min-width: 768px) {

   .side-nav {
     display: none;
  }
}

@media screen and (min-width: 1024px) {
 
	header {
		position: fixed;
		width: 100%;
		height: 10vh;
	}
	
	header nav {
		display: none;
	}

	.user-image {
		width: 3.5em;
		top: 0.8em;
		left: 78%;
		transform: none;
	}
	
	.user-name {
		width: 10em;
		margin: 0;
		top: 1em;
		right: 0%;
		transform: none;
	}
	
	.bell-icon {
		right: 22em;
		top: 1.7em;
	}

	.side-nav {
    display: inline-block;
		position: fixed;
		top: 10vh;
  }
	
	.alert {
		top: 11em;
		width: 89vw;
		margin-left: 3em;
	}
	
	main,
	section {
		width: 100%;
	}
	
	.main-heading {
		margin-left: 0;
	}
	
	.main-search {
		z-index: 104;
		width: 80%;
		height: 4em;
		background-color: rgba(240, 248, 255, 0.6);
		border-bottom: solid 1px lightgray;
		border-left: solid 1px lightgray;
		border-bottom-left-radius: 0.4em;
		position: fixed;
		top: 10vh;
		right: 0;
	}
	
	.search {
		width: 40%;
	}
	
	/*----------------Charts-----------*/
	
	.charts,
	.social-stats {
		width: 100%;
		margin: 0 0 0 6em;
		padding-bottom: 0;
	}
	
	.traffic-chart {
		width: 100%;
		margin: 0 0 2em 2em;
	}
	
	#trafficChart {
		width: 90% !important;
		max-height: 500px !important;
	}
	
	.daily-traffic-chart {  /*canvas container*/
		width: 50%;
		float: left;
		border-top: 1px solid darkgray;
		border-right: 1px solid darkgray;
	}
	
	.daily-traffic-chart h4,
	.mobile-user-chart h4 {
		margin-left: 2em;
	}
	
	#dailyTrafficChart {
		width: 85% !important;
		height: auto !important;
		margin: 0 0 2em 2em;
	}
	
	.mobile-user-chart {  /*canvas container*/
		width: 50%;
		float: right;
		border-top: 1px solid darkgray;
	}
	
	#mobileUserChart {
		width: 85% !important;
		height: auto !important;
	}
	
	/*-------------Social Stats-----------*/

	.social-stats {
		padding-bottom: 2em;
		display: flex;
		flex-wrap: wrap;
	}
	
	.social-stats h4 {
		margin-left: 2em;
		flex: 1 0 100%;
	}
	
	.social {
		width: 27%;
		border: 1px solid lightgray;
		border-radius: 0.4em;
		margin: 0 1em 0 2em;
	}
	
	.social:last-of-type {
		border: 1px solid lightgray;
	}
	
	/*------------Members-----------*/

	.members {
		width: 50%;
		margin: 0 0 0 6em;
		float: left;
		border-right: 1px solid lightgray;
	}
	
	.members h4 {
		margin-left: 2em;
		display: inline-block;
	}
	
	.new-member {
		width: 90%;
		margin-left: 2em;
	}
	
	/*------------Recent Activity-----------*/
	
	.recent-activity {
		width: 42.87%;
		float: right;
	}
	
	.recent-activity h4 {
		display: inline-block;
		width: 50%;
		margin-left: 2em;
	}
	
	.member-activity {
		width: 80%;
		margin-left: 2em;
	
	}
	
	/*----------Message User-----------*/
	
	.message-user {
		width: 50%;
		float: left;
		margin: 0 0 0 6em;
		border-bottom: none;
		border-right: 1px solid lightgray;
	}
	
	.message-user h4 {
		display: inline-block;
		margin-left: 2em;
	}
	
	.message-user form {
		width: 80%;
		margin-left: 2em;
	}
	
	/*----------Settings----------*/
	
	.settings {
		width: 40%;
		float: right;
		border-bottom: none;
	}
	
	.settings h4 {
		margin: 0;
	}
	
	.switch-light {
		width: 90%;
		margin: 0;
	}
	
	.settings select {
		width: 90%;
		margin-left: 0;
	}
	
	.setting-buttons {
		width: 90%;
		margin: 0;
	}
}

